Fix a layout glitch on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -110,5 +110,6 @@ h1 a {
 
 	.cards {
 		padding-bottom: 75px;
+		max-height: calc(100% - 75px);
 	}
 }
